# jsonast

./: CMakeLists.txt  README.md  cmake.sh
src/: ast.h  lex.c  lex.h  main.c  parse.c  parse.h
test/: t1.json  t3.json  t5.json  t6.json
utils/: logs.h  misc.h
utils/adt/: arena.h  array.h  hashmap.h  pair.h
